# KobaltEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CobaltEngine.sln  CobaltEngine.vcxproj  GameCMakeLists.template.txt  GameCMakeLists.templateOLD - Copy.txt  RootCMakeLists.template.txt  RootCMakeLists.templateOLD.txt  build.ps1  vcpkg.json
BuildTemplates/: GameCMakeLists.template.txt  RootCMakeLists.template.txt
cobaltcore/: CMakeLists.txt
cobaltcore/src/: KAABB.cpp  KAABB.h  KBvhNode.cpp  KBvhNode.h  KCollideTriangle.cpp  KCollideTriangle.h  KGameState.cpp  KGameState.h  KPlayerAABB.cpp  KPlayerAABB.h  KRay.cpp  KRay.h  cobaltcore.cpp  cobaltcore.h  coredll.h
cobaltcore/src/coretypes/: BaseEntity.h  CobaltScene.cpp  CobaltScene.h  coredatatypes.h
cobaltcore/src/coretypes/Input/: KInputSet.h
cobaltcore/src/coretypes/Time/: KTimestamp.h
cobaltcore/src/utils/: KInputManager.cpp  KInputManager.h  cobaltclock.h  loopratelimiters.h
cobaltrenderer/: CMakeLists.txt
cobaltrenderer/src/: DevUI.cpp  DevUI.h  cobaltrenderer.cpp  cobaltrenderer.h  kobaltVkRenderer.cpp  kobaltVkRenderer.h  rendererdll.h
cobaltrenderer/src/kvktypes/: VulkanState.h  kvkPipeline.cpp  memHelper.h
cobaltrenderer/src/renderertypes/: DrawInfo.h  FrameBufferObject.cpp  FrameBufferObject.h  GLBuffer.h  GLTexture.cpp  GLTexture.h  LineVert.h  Material.cpp  Material.h  RenderGroup.cpp  RenderGroup.h  RenderObject.cpp  RenderObject.h  Shader.h  SharedBuffer.cpp  SharedBuffer.h  UniformCommons.h  VertexBufferGroup.cpp  VertexBufferGroup.h  VertexInfo.h
cobaltrenderer/src/shaders/: MDI_test.frag  MDI_test.vert
src/Base/: CMakeLists.txt
src/Base/ConsoleManager/: KConCmd.cpp  KConCmd.h  KConManager.cpp  KConManager.h  KConVar.cpp  KConVar.h
src/Base/Include/: BaseDLL.h  BasicTypeAliases.h  ClientDLL.h  EngineDLL.h  RendererDLL.h
src/Base/System/: System.h
src/Base/Time/: Clocks.cpp  Clocks.h  Duration.h  LoopRateLimiter.h  PreciseSleep.h
src/Base/TypeSystem/: ReflectedType.cpp  ReflectedType.h  TypeInfo.h  TypeRegister.cpp  TypeRegister.h
src/Client/: CMakeLists.txt  Client.cpp  Client.h
src/Client/Frame/: Frame.cpp  Frame.h
src/Client/Worldstate/: Worldstate.h
src/Engine/: CMakeLists.txt
src/Engine/Engine/: KobaltEngine.cpp  KobaltEngine.h
src/Engine/Entity/: Entity.h  EntityFactory.cpp  EntityFactory.h
src/Engine/Input/: KInputManager.h  KInputSet.h  gpGlobals.h  loopratelimiters.h
src/GpuInterface/: CMakeLists.txt  GpuInterface.h  VkGpuInterface.cpp  VkGpuInterface.h  VkHelpers.h
src/GpuInterface/Functional/: ShaderCompile.h
src/GpuInterface/Functions/: TransitionBarrier.cpp  TransitionBarrier.h
src/GpuInterface/ShaderCompile/: GlslShaderCompile.h  ShaderCompile.h  SlangCompileContext.h  SlangCompiledUnit.h
src/GpuInterface/Types/: Buffer.cpp  Buffer.h  BufferSet.h  DescriptorHandle.h  DescriptorHeapBuffer.cpp  DescriptorHeapBuffer.h  DescriptorSetLayoutInfo.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Frame.cpp  Frame.h  Pipeline.h  PipelineCompute.cpp  PipelineCompute.h  PipelineGraphics.cpp  PipelineGraphics.h  Resource.h  ResourceHandle.h  ResourceSet.h  ResourceSetManager.h  Sampler.cpp  Sampler.h  Swapchain.cpp  Swapchain.h  SwapchainOutput.h  TaskGraph.h  TaskNode.h  Texture.cpp  Texture.h  memHelper.h
src/GpuInterface/Types/TaskNodes/: RenderTriangle.cpp  RenderTriangle.h  StageBarrier.cpp  StageBarrier.h  SubmitAndPresent.cpp  SubmitAndPresent.h
src/GpuInterface/Types/kvktypes/: kvkBuffer.h  kvkPipeline.h
src/GpuInterface/shaders/: combinedVertFrag.slang  glsl.frag  glsl.vert  glslcompute.comp  slangcompute.slang
src/Launcher/: CMakeLists.txt  main.cpp  spvDescriptorHeapSLANG.spv  spvDescriptorHeapTEST.spv  spvDescriptorHeapTEST2.spv  spvDescriptorHeapTESTEDITED.spv  testclass.h
src/Launcher/LaunchManagment/: LaunchManager.cpp  LaunchManager.h
src/Server/: CMakeLists.txt
src/Server/State/: State.h
src/Shared/Utils/: cobaltclock.h
src/shaders/: MDI_test.frag  line.frag  line.vert
